logs/any-commonlibs.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/any_commonlibs-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/commonlib'...
Compiling './lib/python3.5/site-packages/commonlib/cmd_process.py'...
***   File "./lib/python3.5/site-packages/commonlib/cmd_process.py", line 17
    print datetime.datetime.now().strftime("%Y-%m-%d %H:%M:%S"), " - 命令 - INFO -", current_file, " - ", cmd
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/commonlib/configs.py'...
***   File "./lib/python3.5/site-packages/commonlib/configs.py", line 61
    print cf_dict
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/commonlib/deco.py'...
***   File "./lib/python3.5/site-packages/commonlib/deco.py", line 12
    print "before called [%s]." % func.__name__
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
